--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -57,9 +57,9 @@
               mat-raised-button
               color="primary"
               (click)="generateSharecodeForUgc()"
-              >
-                <span matTooltip='Generate sharecode for UGC'>Generate Sharecode</span>
-              </button>
+            >
+              <span matTooltip="Generate sharecode for UGC">Generate Sharecode</span>
+            </button>
             <div class="sf-horizontal .do-not-manipulate-margin">
               <verify-button
                 #verifyReportBtn
@@ -83,8 +83,8 @@
               </button>
             </div>
           </div>
-        </div> 
-      </div> 
+        </div>
+      </div>
     </mat-card>
 
     <mat-card>
