Forgot to push these changes

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -53,6 +53,7 @@
               class="sf-default-margins sf-action-list-margins"
               [disabled]="!canGenerateSharecode"
               mat-raised-button
+              monitorCompleteSnackbar
               color="primary"
               (click)="generateSharecodeForUgc()"
             >
