--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -61,7 +61,7 @@
             >
               <span matTooltip="Generate sharecode for UGC">Generate Sharecode</span>
             </button>
-            <div class="sf-horizontal .do-not-manipulate-margin">
+            <div class="sf-horizontal do-not-manipulate-margin">
               <verify-button
                 #verifyReportBtn
                 [permissionAttribute]="reportPermAttribute"
