--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -59,7 +59,7 @@
               color="primary"
               (click)="generateSharecodeForUgc()"
             >
-              <span matTooltip="Generate sharecode for UGC">Generate Sharecode</span>
+              <span [matTooltip]="generateSharecodeMatTooltip">Generate Sharecode</span>
             </button>
             <div class="sf-horizontal do-not-manipulate-margin">
               <verify-button
