--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -57,7 +57,7 @@
               color="primary"
               (click)="generateSharecodeForUgc()"
             >
-              <span matTooltip="Generate sharecode for UGC">Generate Sharecode</span>
+              <span [matTooltip]="generateSharecodeMatTooltip">Generate Sharecode</span>
             </button>
             <div *waitForMonitor="getReportReasonsMonitor">
               <mat-form-field
