--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -40,7 +40,10 @@
     }
 
     // get the spacing right
-    margin: -1em;
+    &:not(.do-not-manipulate-margin) {
+      margin: -1em;
+    }
+
     > * {
       margin: 1em;
     }
