working so far!

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -55,8 +55,13 @@
               class="sf-default-margins sf-action-list-margins"
               [disabled]="!canGenerateSharecode"
               mat-raised-button
-              monitorCompleteSnackbar
               color="primary"
+              stateManager
+              [monitor]="generateSharecodeMonitor"
+              monitorDisable
+              monitorWarn
+              monitorWarnSnackbar
+              monitorCompleteSnackbar              
               (click)="generateSharecodeForUgc()"
             >
               <span [matTooltip]="generateSharecodeMatTooltip">Generate Sharecode</span>
