--- a/StewardClient/src/app/pages/tools/pages/kusto/kusto.component.html
+++ b/StewardClient/src/app/pages/tools/pages/kusto/kusto.component.html
@@ -39,9 +39,6 @@
   <mat-card>
     <mat-card-title>
       Query Results
-      <mat-card-subtitle *ngIf="queryResultsCount > 0">
-        {{ queryResultsCount | number: '1.0':'en-US' }} items.
-      </mat-card-subtitle>
       <help-popover-icon cardTitle="Kusto Query results">
         <p>Some fields may be automatically made into links or prettified.</p>
         <ul>
@@ -60,6 +57,9 @@
         </p>
       </help-popover-icon>
     </mat-card-title>
+    <mat-card-subtitle *ngIf="queryResultsCount > 0">
+      {{ queryResultsCount | number: '1.0':'en-US' }} items
+    </mat-card-subtitle>
     <ng-container *ngIf="!isLoading && !loadError; else failState">
       <json-table-results
         *ngIf="queryResponse"
