Move styling to the scss file instead of html

--- a/StewardClient/src/app/shared/components/json-table-results/json-table-results.component.html
+++ b/StewardClient/src/app/shared/components/json-table-results/json-table-results.component.html
@@ -1,7 +1,7 @@
 <section>
   <ng-container *ngIf="results?.length > 0; else noResultsState">
     <div class="table-container">
-      <table mat-table [dataSource]="results" class="mat-elevation-z8" width="100%">
+      <table mat-table [dataSource]="results" class="mat-elevation-z8">
         <ng-container *ngFor="let column of resultKeys; let i = index" matColumnDef="{{ column }}">
           <mat-header-cell *matHeaderCellDef>
             <button
