Show share code in tooltip when hovering copy button after clone

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/components/ugc-action-snackbar/ugc-operation-snackbar.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/components/ugc-action-snackbar/ugc-operation-snackbar.component.html
@@ -12,7 +12,7 @@
   *ngIf="!!completionValue?.shareCode"
   mat-icon-button
   [cdkCopyToClipboard]="completionValue?.shareCode"
-  matTooltip="Copy Share Code"
+  matTooltip="Copy Share Code ({{ completionValue?.shareCode }})"
 >
   <mat-icon>pin</mat-icon>
 </button>
