--- a/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
@@ -134,9 +134,6 @@
     <mat-icon matTooltip="Zendesk API missing">warning</mat-icon>
     <mat-icon matTooltip="Refresh page">refresh</mat-icon>
   </span>
-  <span class="info">
-    <mat-icon [matTooltip]="location">info</mat-icon>
-  </span>
   <span class="short-spacer"></span>
   <span>
     <a
@@ -155,5 +152,5 @@
       >
     </a>
   </span>
-  <sidebar-icons></sidebar-icons>
+  <sidebar-icons class="sidebar-icons"></sidebar-icons>
 </mat-toolbar>
