--- a/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
+++ b/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
@@ -77,3 +77,9 @@
     color: app-color-default-contrast($app-background);
   }
 }
+
+.sidebar-icons {
+  display: flex;
+  flex-direction: row;
+  flex: 0.25 0 2em;
+}
