--- a/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.scss
+++ b/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.scss
@@ -1,5 +1,9 @@
 @import '/src/styles/mixins';
 
+.short-spacer {
+  flex: 0 1 2em;
+}
+
 .mat-menu-trigger {
   padding: 0;
   min-width: $gap-medium + $gap-medium;
