--- a/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -18,7 +18,7 @@
 <span class="short-spacer"></span>
 <span class="info">
   <a 
-  href="http://www.google.com" 
+  href="https://confluence.turn10studios.com/x/r4GiE" 
   target="_blank"
   mat-icon-button
   matTooltip="Documentation"
