--- a/StewardClient/src/app/shared/views/player-hidden-ugc/hidden-ugc-table/hidden-ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/player-hidden-ugc/hidden-ugc-table/hidden-ugc-table.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title>Hidden UGC</mat-card-title>
   <mat-card-subtitle>
-    View and Unhide UGC
+    View and Unhide {{ service.title }} UGC
     <button mat-icon-button matTooltip="Refresh hidden UGC table." (click)="refreshTable()">
       <mat-icon>sync</mat-icon>
     </button>
@@ -85,7 +85,7 @@
               <verify-button
                 #verifyUnhideBtn
                 [permissionAttribute]="unhidePermAttribute"
-                [permissionTitle]="gameTitle"
+                [permissionTitle]="service.title"
               ></verify-button>
               <button
                 mat-raised-button
