--- a/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
@@ -150,8 +150,7 @@
               </mat-card-content>
             </mat-card>
           </mat-tab>
-          <!-- TODO: Add hidden UGC tab once feature is ready in Services -->
-          <!-- <mat-tab>
+          <mat-tab>
             <ng-template mat-tab-label>
               Hidden
               <inline-spinner [monitor]="ugcHidden.getMonitor | renderGuard"></inline-spinner>
@@ -160,7 +159,7 @@
               #ugcHidden
               [identity]="identity"
             ></steelhead-player-hidden-ugc>
-          </mat-tab> -->
+          </mat-tab>
         </mat-tab-group>
       </mat-tab>
       <!-- TODO: Uncomment once auction endpoints are released to LSP Retail. -->
