Align verify hide UGC checkbox to the right in search

--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -9,6 +9,7 @@
     >
       Unselect all
     </button>
+    <div class="sf-spacer"></div>
     <verify-button
       #verifyCheckboxHideBtn
       [disabled]="selectedUgcs?.length <= 0"
