--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
@@ -94,10 +94,8 @@ div.table-wide-actions {
   }
 }
 
-.sf-horizontal {
-  verify-button {
-    flex-grow: 0;
-  }
+div.action-section {
+  width: fit-content;
 }
 
 mat-progress-spinner {
