--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -60,6 +60,7 @@
 
     // things that shouldn't grow to fill space
     > mat-checkbox,
+    > verify-button,
     > button,
     > help-popover-icon,
     > mat-button-toggle-group,
