--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
@@ -94,8 +94,8 @@ div.table-wide-actions {
   }
 }
 
-div.action-section {
-  width: fit-content;
+.action-section {
+  flex-grow: 0;
 }
 
 mat-progress-spinner {
