--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -1,45 +1,49 @@
 <div class="sf-wrapper">
-  <div class="sf-horizontal sf-right do-not-manipulate-margin" *ngIf="ugcHidingSupported">
-    Click on a row to select
-    <button
-      mat-stroked-button
-      color="primary"
-      [disabled]="selectedUgcs?.length <= 0"
-      (click)="unselectAllUgcItems()"
-    >
-      Unselect all
-    </button>
-    <div class="sf-spacer"></div>
-    <span class="action-section">
-      <verify-button
-        #verifyCheckboxHideBtn
-        [disabled]="selectedUgcs?.length <= 0"
-        [permissionAttribute]="hideUgcPermission"
-        [permissionTitle]="gameTitle"
-      ></verify-button>
-      <button
-        mat-raised-button
-        color="warn"
-        [disabled]="selectedUgcs?.length <= 0"
-        [verifyWithV2]="verifyCheckboxHideBtn"
-        (click)="hideMultipleUgc(selectedUgcs)"
-        stateManager
-        [monitor]="hideUgcMonitor"
-        monitorDisable
-        monitorWarn
-        monitorWarnSnackbar
-      >
-        <span [ngPlural]="selectedUgcs?.length">
-          Hide {{ selectedUgcs?.length }}
-          <ng-template ngPluralCase="=1">Ugc </ng-template>
-          <ng-template ngPluralCase="other">Ugcs </ng-template>
-        </span>
-        <mat-spinner
-          *ngIf="hideUgcMonitor.isActive"
-          class="force-inline-2x"
-          [matTooltip]="hideUgcMonitor.label + ' in progress'"
-        ></mat-spinner>
-      </button>
+  <div class="sf-horizontal sf-right" *ngIf="ugcHidingSupported">
+    <span class="sf-vertical">
+      <div class="sf-horizontal sf-right">
+        Click on a row to select
+        <button
+          mat-stroked-button
+          color="primary"
+          [disabled]="selectedUgcs?.length <= 0"
+          (click)="unselectAllUgcItems()"
+        >
+          Unselect all
+        </button>
+      </div>
+      <div class="sf-horizontal sf-right">
+        <verify-button
+          class="action-section"
+          #verifyCheckboxHideBtn
+          [disabled]="selectedUgcs?.length <= 0"
+          [permissionAttribute]="hideUgcPermission"
+          [permissionTitle]="gameTitle"
+        ></verify-button>
+        <button
+          mat-raised-button
+          color="warn"
+          [disabled]="selectedUgcs?.length <= 0"
+          [verifyWithV2]="verifyCheckboxHideBtn"
+          (click)="hideMultipleUgc(selectedUgcs)"
+          stateManager
+          [monitor]="hideUgcMonitor"
+          monitorDisable
+          monitorWarn
+          monitorWarnSnackbar
+        >
+          <span [ngPlural]="selectedUgcs?.length">
+            Hide {{ selectedUgcs?.length }}
+            <ng-template ngPluralCase="=1">Ugc </ng-template>
+            <ng-template ngPluralCase="other">Ugcs </ng-template>
+          </span>
+          <mat-spinner
+            *ngIf="hideUgcMonitor.isActive"
+            class="force-inline-2x"
+            [matTooltip]="hideUgcMonitor.label + ' in progress'"
+          ></mat-spinner>
+        </button>
+      </div>
     </span>
   </div>
 </div>
