removed unwanted code

--- a/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -10,10 +10,7 @@
             <woodstock-player-game-details [identity]="identity"></woodstock-player-game-details>
             <woodstock-cms-override [identity]="identity"></woodstock-cms-override>
           </div>
-          <woodstock-ban-history
-            [xuid]="identity.xuid"
-            [identity]="completeIdentity"
-          ></woodstock-ban-history>
+          <woodstock-ban-history [xuid]="identity.xuid"></woodstock-ban-history>
           <woodstock-profile-notes [identity]="identity"></woodstock-profile-notes>
           <woodstock-gamertags [identity]="identity"></woodstock-gamertags>
           <woodstock-consoles [identity]="identity"></woodstock-consoles>
