clean tests, need to do some manual tests then ship it.

--- a/StewardClient/src/app/shared/views/player-hidden-ugc/woodstock-player-hidden-ugc/woodstock-player-hidden-ugc.component.html
+++ b/StewardClient/src/app/shared/views/player-hidden-ugc/woodstock-player-hidden-ugc/woodstock-player-hidden-ugc.component.html
@@ -1,5 +1,5 @@
 <hidden-ugc-table
-  [service]="service"
+  [service]="serviceContract"
   [identity]="identity"
   [gameTitle]="gameTitle"
   (reloadMonitor)="prepareMonitor($event)"
