--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -61,6 +61,7 @@
           stateManager
           [monitor]="generateSharecodesMonitor"
           monitorDisable
+          monitorCompleteSnackbar
           monitorWarnSnackbar
         >
           <span [ngPlural]="ugcsWithoutSharecodes?.length">
