--- a/StewardClient/src/app/pages/tools/pages/create-auction/components/create-single-auction/create-single-auction.component.html
+++ b/StewardClient/src/app/pages/tools/pages/create-auction/components/create-single-auction/create-single-auction.component.html
@@ -13,7 +13,7 @@
           ></woodstock-make-model-autocomplete>
         </div>
         <div class="sf-horizontal">
-          <mat-form-field class="sf-10-char sf-default-hint">
+          <mat-form-field class="sf-default-hint">
             <mat-label>Opening Price</mat-label>
             <input
               type="number"
@@ -24,7 +24,7 @@
           </mat-form-field>
         </div>
         <div class="sf-horizontal">
-          <mat-form-field class="sf-10-char sf-default-hint">
+          <mat-form-field class="sf-default-hint">
             <mat-label>Buyout Price</mat-label>
             <input
               type="number"
@@ -42,7 +42,7 @@
           </mat-button-toggle-group>
         </div>
         <div class="sf-horizontal">
-          <mat-form-field appearance="fill" class="sf-10-char sf-default-hint">
+          <mat-form-field appearance="fill" class="sf-default-hint">
             <mat-label>Seller Id</mat-label>
             <input type="number" matInput placeholder="1" [formControl]="formControls.sellerId" />
           </mat-form-field>
