--- a/StewardClient/src/app/pages/tools/pages/create-auction/components/create-single-auction/create-single-auction.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/create-auction/components/create-single-auction/create-single-auction.component.scss
@@ -3,3 +3,9 @@
 :host {
   @include flex-column-fill();
 }
+
+mat-form-field {
+  max-width: $single-input-max-width;
+  width: 100%;
+  flex-grow: 0;
+}
