--- a/StewardClient/src/app/shared/views/player-ugc/woodstock/hidden/woodstock-player-hidden-ugc.component.html
+++ b/StewardClient/src/app/shared/views/player-ugc/woodstock/hidden/woodstock-player-hidden-ugc.component.html
@@ -4,6 +4,7 @@
   <woodstock-ugc-table
     [content]="filteredUgcContent"
     [contentType]="contentType"
+    [isContentHidden]="true"
     (ugcItemsRemoved)="removeUgcItems($event)"
   ></woodstock-ugc-table>
 </ng-container>
