--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -12,7 +12,7 @@
           Unselect all
         </button>
       </div>
-      <div class="sf-horizontal sf-right">
+      <div *ngIf="!isContentHidden" class="sf-horizontal sf-right">
         <verify-button
           class="action-section"
           #verifyCheckboxHideBtn
@@ -44,7 +44,39 @@
           ></mat-spinner>
         </button>
       </div>
-      <div class="sf-horizontal sf-right">
+      <div *ngIf="isContentHidden" class="sf-horizontal sf-right">
+        <verify-button
+          class="action-section"
+          #verifyCheckboxUnhideBtn
+          [disabled]="selectedUgcs?.length <= 0"
+          [permissionAttribute]="unhideUgcPermission"
+          [permissionTitle]="gameTitle"
+        ></verify-button>
+        <button
+          mat-raised-button
+          color="warn"
+          [disabled]="selectedUgcs?.length <= 0"
+          [verifyWithV2]="verifyCheckboxUnhideBtn"
+          (click)="unhideMultipleUgc(selectedUgcs)"
+          stateManager
+          [monitor]="unhideUgcMonitor"
+          monitorDisable
+          monitorWarn
+          monitorWarnSnackbar
+        >
+          <span [ngPlural]="selectedUgcs?.length">
+            Unhide {{ selectedUgcs?.length }}
+            <ng-template ngPluralCase="=1">Ugc </ng-template>
+            <ng-template ngPluralCase="other">Ugcs </ng-template>
+          </span>
+          <mat-spinner
+            *ngIf="unhideUgcMonitor.isActive"
+            class="force-inline-2x"
+            [matTooltip]="unhideUgcMonitor.label + ' in progress'"
+          ></mat-spinner>
+        </button>
+      </div>
+      <div *ngIf="!isContentHidden" class="sf-horizontal sf-right">
         <verify-button
           class="action-section"
           #verifyCheckboxGenerateBtn
