--- a/StewardClient/src/app/pages/tools/pages/services-table-storage/components/services-filterable-table/services-filterable-table.component.html
+++ b/StewardClient/src/app/pages/tools/pages/services-table-storage/components/services-filterable-table/services-filterable-table.component.html
@@ -4,6 +4,7 @@
       <mat-card-title>Services Table Storage</mat-card-title>
       <mat-card-subtitle>{{ contract?.gameTitle | humanize }}</mat-card-subtitle>
       <div class="sf-spacer"></div>
+      <mat-slide-toggle [formControl]="formControls.filterResults">Show All</mat-slide-toggle>
       <button
         mat-raised-button
         class="lookup"
